--- a/offer-detail/src/main/res/layout/fragment_offer_detail.xml
+++ b/offer-detail/src/main/res/layout/fragment_offer_detail.xml
@@ -36,7 +36,7 @@
         android:paddingVertical="2dp"
         android:background="@drawable/gray_rounded_background"
         android:textSize="14sp"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/vk_sans_display_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageSlider" />
 
@@ -44,7 +44,7 @@
         android:id="@+id/tvOfferTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/vk_sans_display_bold"
         android:text="@string/offfer_title_placeholder_text"
         android:gravity="center"
         android:layout_marginTop="16dp"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/vk_sans_display_demi_bold"
         android:text="@string/brand_placeholder_text"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -84,7 +84,7 @@
             android:id="@+id/tvOfferRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/vk_sans_display_bold"
             android:text="@string/rating_placeholder_text"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -112,7 +112,7 @@
             android:id="@+id/tvOfferPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/vk_sans_display_bold"
             android:text="@string/price_placeholder_text"
             android:textSize="22sp"
             android:textColor="@color/green"
@@ -126,7 +126,7 @@
             android:layout_marginStart="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/vk_sans_display_demi_bold"
             android:text="@string/discount_text_placeholder"
             android:textSize="12sp"
             android:textColor="@color/white" />
